--- a/favicon.html
+++ b/favicon.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>favicon</title>
   <!-- 파비콘 연결 기본 -->
-  <link rel="shortcut icon" href="../assets/악어.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/악어.ico" type="image/x-icon">
 </head>
 <body>
   <h1>favicon 기본 연결</h1>
