240301Ex.html 수정

--- a/240301Ex1.html
+++ b/240301Ex1.html
@@ -49,7 +49,7 @@
 
       <tbody>
         <tr>
-          <th><img src="../images/240301/ex1.jpg" alt="햄스터의 모습 사진"></th>
+          <th><img src="./images/240301/ex1.jpg" alt="햄스터의 모습 사진"></th>
         </tr>
         <tr>
           <th>생물 분류</th>
