240301Ex.html 수정

--- a/240301Ex1.html
+++ b/240301Ex1.html
@@ -154,7 +154,7 @@
       <hr>
       <p><label for="textbox1"><strong>의견 :</strong></label></p>
       <textarea name="textkBox" id="textbox1" cols="30" rows="10" placeholder="의견을 자유롭게 작성하여 주세요"></textarea>
-        <p><em>* 본 설문 조사에 대한 답변은 데이터 수집을 위한 정보로만 사용됨을 알려드립니다.</em></p>
+        <p><em>* 본 설문 조사에 대한 답변은 다양한 데이터 수집을 위한 것임을 알려드립니다.</em></p>
       <button type="submit">제출</button>
       <button type="reset">수정</button>
     </fieldset>
