--- a/240321_Ex.html
+++ b/240321_Ex.html
@@ -10,7 +10,7 @@
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-size: cover;
-      width: 50vw; 
+      width: 50rem; 
       border: 5px burlywood solid;
       margin: 30px auto;
     }
@@ -45,7 +45,7 @@
 
     header .menu1 li {
       margin: 0;
-      width: 7vw;
+      width: 5rem;
     }
 
     header .menu1 li a {
@@ -67,7 +67,7 @@
     }
 
     main article {
-      width: 70vw;
+      /* width: 70vw; */
       background-color: #ddd;
       border-right: 1px solid red;
 
@@ -107,7 +107,7 @@
     }
 
     main aside {
-      width: 30vw;
+      /* width: 30vw; */ width: 25rem;
       background-color: #fff;
       display: flex;
       flex-direction: column;
