--- a/panstar.html
+++ b/panstar.html
@@ -13,7 +13,7 @@
   <meta property="og:type" content="website">
 
   <!-- reset -->
-  <link rel="stylesheet" href="../assets/styles/reset.css">
+  <link rel="stylesheet" href="./assets/styles/reset.css">
   <!-- 내가 만든 css -->
   <link rel="stylesheet" href="./panstar.css">
 </head>
