--- a/mqEx1.html
+++ b/mqEx1.html
@@ -14,7 +14,7 @@
     }
     .container {
       display: grid;
-      grid-auto-rows: 50vh;
+      grid-auto-rows: calc(100vh / 3);
     }
     .container .box1 { background-color: #1C1678; color: #fff; }
     .container .box2 { background-color: #8576FF; }
