--- a/240419_grid/calendar-gridEx.html
+++ b/240419_grid/calendar-gridEx.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <title>calendar-gridEx</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
+  <!-- og -->
+  <meta property="og:title" content="그리드 예제 연습 사이트">
+  <meta property="og:url" content="https://gonghanna.github.io/rootEx2/240419_grid">
+  <meta property="og:description" content="그리드 예제 연습 반응형 웹 사이트 입니다.">
+  <meta property="og:type" content="website">
   <!-- reset css -->
   <link rel="stylesheet" href="../assets/styles/reset.css">
   <!-- fonts -->
