--- a/lilybyred/shop.html
+++ b/lilybyred/shop.html
@@ -9,8 +9,8 @@
   <link rel="shortcut icon" href="./images/favicon-.ico" type="image/x-icon">
   <!-- og -->
   <meta property="og:title" content="릴리바이레드">
-  <meta property="og:url" content="https://gonghanna.github.io/rootEx2/">
-  <meta property="og:image" content="https://gonghanna.github.io/rootEx2/">
+  <meta property="og:url" content="https://javascript-team-project.github.io/javaScriptTeamProject/">
+  <meta property="og:image" content="https://javascript-team-project.github.io/javaScriptTeamProject/images/meta-img.jpg">
   <meta property="og:description" content="멀티 컬러 메이크업 브랜드, 릴리바이레드">
   <meta property="og:type" content="website">
   <!-- reset css -->
@@ -78,78 +78,30 @@
       </div>
       <ul class="product">
         <li class="product-box">
-          <img src="./images/shop-romentictint.jpg" alt="img1" class="main-img">
-          <img src="./images/shop-romentictint-hover.jpg" alt="hoverimg1" class="hover-img">
-          <h3>[회원only] 릴리바이레드 로맨틱 라이어 무스 틴트</h3>
-          <p>51% <strong>4,900원</strong> <span>10,000원</span></p>
         </li>
         <li class="product-box">
-          <img src="./images/shop-ninetonine.jpg" alt="img2" class="main-img">
-          <img src="./images/shop-ninetonine-hover.jpg" alt="hoverimg2" class="hover-img">
-          <h3>[회원only] 스태리아이즈 나인투나인 젤 아이라이너</h3>
-          <p>55% <strong>4,500원</strong> <span>10,000원</span></p>
         </li>
         <li class="product-box">
-          <img src="./images/shop-cotingtint.jpg" alt="img3">
-          <h3>[회원only] 릴리바이레드 앙큼 라이어 코팅 틴트</h3>
-          <p>51% <strong>4,900원</strong> <span>10,000원</span></p>
         </li>
         <li class="product-box">
-          <img src="./images/shop-ninetonine-survival.jpg" alt="img4" class="main-img">
-          <img src="./images/shop-ninetonine-survival-hover.jpg" alt="hoverimg3" class="hover-img">
-          <h3>[회원only] 릴리바이레드 나인투나인 서바이벌 컬러카라</h3>
-          <p>50% <strong>6,000원</strong> <span>12,000원</span></p>
         </li>
         <li class="product-box">
-          <img src="./images/shop-mood.jpg" alt="img5" class="main-img">
-          <img src="./images/shop-mood-hover.jpg" alt="hoverimg4" class="hover-img">
-          <h3>[회원only] 무드치트킷</h3>
-          <p>63% <strong>9,900원</strong> <span>27,000원</span></p>
         </li>
         <li class="product-box">
-          <img src="./images/shop-glittercrash.jpg" alt="img6">
-          <h3>[회원only] 릴리바이레드 글리터존 크래쉬</h3>
-          <p>92% <strong>990원</strong> <span>13,000원</span></p>
         </li>
         <li class="product-box">
-          <img src="./images/shop-hardflat.jpg" alt="img7" class="main-img">
-          <img src="./images/shop-hardflat-hover.jpg" alt="hoverimg5" class="hover-img">
-          <h3>[회원only] 릴리바이레드 하드플랫 브로우펜슬</h3>
-          <p>61% <strong>3,900원</strong> <span>10,000원</span></p>
         </li>
         <li class="product-box">
-          <img src="./images/shop-watertint.jpg" alt="img8">
-          <h3>[회원only] 릴리바이레드 쥬시 라이어 워터 틴트</h3>
-          <p>51% <strong>4,900원</strong> <span>10,000원</span></p>
         </li>
         <li class="product-box hidden">
-          <img src="./images/shop-lovebeam.jpg" alt="img9" class="main-img">
-          <img src="./images/shop-lovebeam-hover.jpg" alt="hoverimg6" class="hover-img">
-          <h3>[회원only] 릴리바이레드 러브빔 치크</h3>
-          <p>55% <strong>5,900원</strong> <span>13,000원</span></p>
         </li>
         <li class="product-box hidden">
-          <img src="./images/shop-lovebeam-boam.jpg" alt="img10" class="main-img">
-          <img src="./images/shop-lovebeam-boam-hover.jpg" alt="hoverimg7" class="hover-img">
-          <h3>[회원only] 릴리바이레드 러브빔 치크밤</h3>
-          <p>92% <strong>990원</strong> <span>13,000원</span></p>
         </li>
         <li class="product-box hidden">
-          <img src="./images/shop-magnetfit.jpg" alt="img11">
-          <h3>[회원only] 릴리바이레드 마그넷 핏 리퀴드 컨실러</h3>
-          <p>46% <strong>5,900원</strong> <span>11,000원</span></p>
         </li>
         <li class="product-box hidden">
-          <img src="./images/shop-fixingtint.jpg" alt="img12" class="main-img">
-          <img src="./images/shop-fixingtint-hover.jpg" alt="hoverimg8" class="hover-img">
-          <h3>[회원only] 릴리바이레드 글래시 레이어 픽싱 틴트</h3>
-          <p>58% <strong>5,000원</strong> <span>12,000원</span></p>
         </li>
         <li class="product-box hidden">
-          <img src="./images/shop-littlebity.jpg" alt="img13" class="main-img">
-          <img src="./images/shop-littlebity-hover.jpg" alt="hoverimg9" class="hover-img">
-          <h3>[회원only] 릴리바이레드 리틀 비티 모먼트 섀도우</h3>
-          <p>59% <strong>4,500원</strong> <span>10,900원</span></p>
         </li>
       </ul>
 
@@ -189,22 +141,6 @@
     <p class="copy">Copyright ⓒ lilybyred. All right reserved</p>
   </address>
 </footer>
-
-<script>
-  // 마우스 따라 움직이는 눈
-  $(document).mousemove(function (event) {
-    $('.eye').each(function () {
-      const eye = $(this);
-      const centerX = eye.offset().left + eye.width() / 2;
-      const centerY = eye.offset().top + eye.height() / 2;
-
-      const angle = Math.atan2(event.pageY - centerY, event.pageX - centerX);
-      const rotateDeg = angle * (180 / Math.PI) + 90;
-
-      eye.css('transform', `rotate(${rotateDeg}deg)`);
-    });
-  });
-</script>
 </body>
 
 </html>
