--- a/lilybyred/index.html
+++ b/lilybyred/index.html
@@ -9,8 +9,8 @@
   <link rel="shortcut icon" href="./images/favicon-.ico" type="image/x-icon">
   <!-- og -->
   <meta property="og:title" content="릴리바이레드">
-  <meta property="og:url" content="https://gonghanna.github.io/rootEx2/">
-  <meta property="og:image" content="https://gonghanna.github.io/rootEx2/">
+  <meta property="og:url" content="https://javascript-team-project.github.io/javaScriptTeamProject/">
+  <meta property="og:image" content="https://javascript-team-project.github.io/javaScriptTeamProject/images/meta-img.jpg">
   <meta property="og:description" content="멀티 컬러 메이크업 브랜드, 릴리바이레드">
   <meta property="og:type" content="website">
   <!-- reset css -->
